tests/ui/parser/removed-syntax-fixed-vec.stderr
error: expected one of `!`, `(`, `+`, `::`, `;`, `<`, `]`, or `is`, found `*`
  --> $DIR/removed-syntax-fixed-vec.rs:1:17
   |
LL | type v = [isize * 3];
   |                 ^ expected one of 8 possible tokens

error: aborting due to previous error

